--- a/sandbox/manpage-writer/expected/test.man
+++ b/sandbox/manpage-writer/expected/test.man
@@ -1,6 +1,6 @@
 '\" t
 .\" Man page generated from reStructuredText
-.\" by the Docutils 0.22b.dev manpage writer.
+.\" by the Docutils 0.22rc2.dev manpage writer.
 .
 .
 .nr rst2man-indent-level 0
