--- a/docutils/test/functional/expected/latex_memoir.tex
+++ b/docutils/test/functional/expected/latex_memoir.tex
@@ -2069,54 +2069,59 @@ section, \textquotedbl{}Docutils System Messages\textquotedbl{}:
 \chapter[Docutils System Messages]{\color{red}Docutils System Messages%
 }
 
+\raisebox{1em}{\hypertarget{system-message-1}{}}
 \DUadmonition[system-message]{
-\DUtitle[system-message]{system-message
-\raisebox{1em}{\hypertarget{system-message-1}{}}}
+\DUtitle[system-message]{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~99
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~99
 
 \hyperlink{problematic-1}{
 Undefined substitution referenced: \textquotedbl{}problematic\textquotedbl{}.
-}}
+}
+}
 
+\raisebox{1em}{\hypertarget{system-message-2}{}}
 \DUadmonition[system-message]{
-\DUtitle[system-message]{system-message
-\raisebox{1em}{\hypertarget{system-message-2}{}}}
+\DUtitle[system-message]{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~390
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~390
 
 \hyperlink{footnote-reference-8}{
 Unknown target name: \textquotedbl{}5\textquotedbl{}.
-}}
+}
+}
 
+\raisebox{1em}{\hypertarget{system-message-3}{}}
 \DUadmonition[system-message]{
-\DUtitle[system-message]{system-message
-\raisebox{1em}{\hypertarget{system-message-3}{}}}
+\DUtitle[system-message]{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~399
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~399
 
 \hyperlink{citation-reference-3}{
 Unknown target name: \textquotedbl{}nonexistent\textquotedbl{}.
-}}
+}
+}
 
+\raisebox{1em}{\hypertarget{system-message-4}{}}
 \DUadmonition[system-message]{
-\DUtitle[system-message]{system-message
-\raisebox{1em}{\hypertarget{system-message-4}{}}}
+\DUtitle[system-message]{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~426
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~426
 
 \hyperlink{problematic-2}{
 Unknown target name: \textquotedbl{}hyperlink reference without a target\textquotedbl{}.
-}}
+}
+}
 
+\raisebox{1em}{\hypertarget{system-message-5}{}}
 \DUadmonition[system-message]{
-\DUtitle[system-message]{system-message
-\raisebox{1em}{\hypertarget{system-message-5}{}}}
+\DUtitle[system-message]{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~439
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~439
 
 \hyperlink{problematic-3}{
 Duplicate target name, cannot be used as a unique reference: \textquotedbl{}duplicate target names\textquotedbl{}.
-}}
+}
+}
 
 \end{document}
