--- a/docutils/test/functional/expected/standalone_rst_latex.tex
+++ b/docutils/test/functional/expected/standalone_rst_latex.tex
@@ -2084,64 +2084,69 @@ section, “Docutils System Messages”:
 \section[Docutils System Messages]{\color{red}Docutils System Messages%
 }
 
+\raisebox{1em}{\hypertarget{system-message-1}{}}
 \begin{DUclass}{system-message}
 \begin{DUadmonition}
-\DUtitle{system-message
-\raisebox{1em}{\hypertarget{system-message-1}{}}}
+\DUtitle{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~99
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~99
 
 \hyperlink{problematic-1}{
 Undefined substitution referenced: \textquotedbl{}problematic\textquotedbl{}.
-}\end{DUadmonition}
+}
+\end{DUadmonition}
 \end{DUclass}
 
+\raisebox{1em}{\hypertarget{system-message-2}{}}
 \begin{DUclass}{system-message}
 \begin{DUadmonition}
-\DUtitle{system-message
-\raisebox{1em}{\hypertarget{system-message-2}{}}}
+\DUtitle{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~390
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~390
 
 \hyperlink{footnote-reference-8}{
 Unknown target name: \textquotedbl{}5\textquotedbl{}.
-}\end{DUadmonition}
+}
+\end{DUadmonition}
 \end{DUclass}
 
+\raisebox{1em}{\hypertarget{system-message-3}{}}
 \begin{DUclass}{system-message}
 \begin{DUadmonition}
-\DUtitle{system-message
-\raisebox{1em}{\hypertarget{system-message-3}{}}}
+\DUtitle{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~399
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~399
 
 \hyperlink{citation-reference-3}{
 Unknown target name: \textquotedbl{}nonexistent\textquotedbl{}.
-}\end{DUadmonition}
+}
+\end{DUadmonition}
 \end{DUclass}
 
+\raisebox{1em}{\hypertarget{system-message-4}{}}
 \begin{DUclass}{system-message}
 \begin{DUadmonition}
-\DUtitle{system-message
-\raisebox{1em}{\hypertarget{system-message-4}{}}}
+\DUtitle{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~426
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~426
 
 \hyperlink{problematic-2}{
 Unknown target name: \textquotedbl{}hyperlink reference without a target\textquotedbl{}.
-}\end{DUadmonition}
+}
+\end{DUadmonition}
 \end{DUclass}
 
+\raisebox{1em}{\hypertarget{system-message-5}{}}
 \begin{DUclass}{system-message}
 \begin{DUadmonition}
-\DUtitle{system-message
-\raisebox{1em}{\hypertarget{system-message-5}{}}}
+\DUtitle{\color{red}System Message}
 
-{\color{red}ERROR/3} in \texttt{functional/input/data/standard.rst}, line~439
+ERROR/3 in \texttt{functional/input/data/standard.rst}, line~439
 
 \hyperlink{problematic-3}{
 Duplicate target name, cannot be used as a unique reference: \textquotedbl{}duplicate target names\textquotedbl{}.
-}\end{DUadmonition}
+}
+\end{DUadmonition}
 \end{DUclass}
 
 \end{document}
