--- a/sandbox/manpage-writer/expected/man-de.1.man
+++ b/sandbox/manpage-writer/expected/man-de.1.man
@@ -1,6 +1,6 @@
 '\" t
 .\" Man page generated from reStructuredText
-.\" by the Docutils 0.22rc6.dev manpage writer.
+.\" by the Docutils 0.23b.dev manpage writer.
 .
 .
 .nr rst2man-indent-level 0
