--- a/docutils/test/functional/expected/latex_leavevmode.tex
+++ b/docutils/test/functional/expected/latex_leavevmode.tex
@@ -360,6 +360,7 @@ paragraph automatically, with or without \texttt{\textbackslash{}leavevmode}, so
 \item[{Comment and Target}] \leavevmode
 % This is ignored.
 
+\phantomsection\label{foo}
 \begin{itemize}
 \item Comments and other “Invisible” nodes (substitution definitions,
 targets, pending) must be skipped when determining whether a
