--- a/docutils/test/functional/expected/standalone_rst_manpage.man
+++ b/docutils/test/functional/expected/standalone_rst_manpage.man
@@ -1,5 +1,5 @@
 .\" Man page generated from reStructuredText
-.\" by the Docutils 0.22.4b1.dev manpage writer.
+.\" by the Docutils 0.22.4 manpage writer.
 .
 .
 .nr rst2man-indent-level 0
